--- a/src/examples/MobilePayFruitshop-Android/app/build.gradle
+++ b/src/examples/MobilePayFruitshop-Android/app/build.gradle
@@ -5,13 +5,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "dk.danskebank.mobilepayfruitshop"
-        minSdkVersion 10
-        targetSdkVersion 22
+        applicationId "dk.mobilepay.fruitshop"
+        minSdkVersion 21
+        targetSdkVersion 29
 
         versionCode 1
         versionName "1.0"
