--- a/src/examples/MobilePayFruitshop-Android/app/src/main/AndroidManifest.xml
+++ b/src/examples/MobilePayFruitshop-Android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="dk.danskebank.mobilepayfruitshop" >
+    package="dk.mobilepay.fruitshop" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
         tools:ignore="NewApi">
         <activity
-            android:name="dk.danskebank.mobilepayfruitshop.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,5 +19,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
