--- a/src/examples/MobilePayFruitshop-iPhone/MobilePayFruitshop/Info.plist
+++ b/src/examples/MobilePayFruitshop-iPhone/MobilePayFruitshop/Info.plist
@@ -22,7 +22,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.danskebank.mobilepay.MobilePauFruitshop</string>
+			<string>com.mobilepay.MobilePayFruitshop</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fruitshop</string>
